@@ -1,3 +1,9 @@
+2005-10-14  Roger Leigh  <rleigh@debian.org>
+
+	* schroot/schroot.1.in: Restore session options.
+
+	* schroot/schroot.c (parse_options): Restore session options.
+
 2005-10-13  Roger Leigh  <rleigh@debian.org>
 
 	* Version 0.1.6.
